fix aos overflow

--- a/src/Styles/Activities.css
+++ b/src/Styles/Activities.css
@@ -2,6 +2,8 @@
 .Activities {
     width: 100%;
     color: greenyellow;
+    overflow: hidden;
+    
 }
 
 .time-table {
