--- a/src/Styles/DateAndTime.css
+++ b/src/Styles/DateAndTime.css
@@ -3,6 +3,7 @@
     display: flex;
     width: 100%;
     color: greenyellow;
+    overflow: hidden;
 }
 
 .DateAndTime h1 {
